[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/aoc-2023"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
